csbind/joltc_bindgen.cs


        [DllImport(__DllName, EntryPoint = "JPH_Shape_GetVolume", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_Shape_GetVolume(JPH_Shape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_Shape_CastRay", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool JPH_Shape_CastRay(JPH_Shape* shape, JPH_Vec3* origin, JPH_Vec3* direction, JPH_RayCastResult* hit);

        [DllImport(__DllName, EntryPoint = "JPH_Shape_CastRay2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool JPH_Shape_CastRay2(JPH_Shape* shape, JPH_Vec3* origin, JPH_Vec3* direction, JPH_RayCastSettings* rayCastSettings, uint collectorType, delegate* unmanaged[Cdecl]<void*, JPH_RayCastResult*, void> callback, void* userData);

        [DllImport(__DllName, EntryPoint = "JPH_Shape_CollidePoint", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool JPH_Shape_CollidePoint(JPH_Shape* shape, JPH_Vec3* point);

        [DllImport(__DllName, EntryPoint = "JPH_Shape_CollidePoint2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool JPH_Shape_CollidePoint2(JPH_Shape* shape, JPH_Vec3* point, uint collectorType, delegate* unmanaged[Cdecl]<void*, JPH_CollidePointResult*, void> callback, void* userData);

        [DllImport(__DllName, EntryPoint = "JPH_ConvexShapeSettings_GetDensity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_ConvexShapeSettings_GetDensity(JPH_ConvexShapeSettings* shape);

        [DllImport(__DllName, EntryPoint = "JPH_ConvexShapeSettings_SetDensity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_ConvexShapeSettings_SetDensity(JPH_ConvexShapeSettings* shape, float value);

        [DllImport(__DllName, EntryPoint = "JPH_ConvexShape_GetDensity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_ConvexShape_GetDensity(JPH_ConvexShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_ConvexShape_SetDensity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_ConvexShape_SetDensity(JPH_ConvexShape* shape, float inDensity);

        [DllImport(__DllName, EntryPoint = "JPH_BoxShapeSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_BoxShapeSettings* JPH_BoxShapeSettings_Create(JPH_Vec3* halfExtent, float convexRadius);

        [DllImport(__DllName, EntryPoint = "JPH_BoxShapeSettings_CreateShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_BoxShape* JPH_BoxShapeSettings_CreateShape(JPH_BoxShapeSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_BoxShape_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_BoxShape* JPH_BoxShape_Create(JPH_Vec3* halfExtent, float convexRadius);

        [DllImport(__DllName, EntryPoint = "JPH_BoxShape_GetHalfExtent", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_BoxShape_GetHalfExtent(JPH_BoxShape* shape, JPH_Vec3* halfExtent);

        [DllImport(__DllName, EntryPoint = "JPH_BoxShape_GetConvexRadius", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_BoxShape_GetConvexRadius(JPH_BoxShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_SphereShapeSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_SphereShapeSettings* JPH_SphereShapeSettings_Create(float radius);

        [DllImport(__DllName, EntryPoint = "JPH_SphereShapeSettings_CreateShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_SphereShape* JPH_SphereShapeSettings_CreateShape(JPH_SphereShapeSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_SphereShapeSettings_GetRadius", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_SphereShapeSettings_GetRadius(JPH_SphereShapeSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_SphereShapeSettings_SetRadius", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_SphereShapeSettings_SetRadius(JPH_SphereShapeSettings* settings, float radius);

        [DllImport(__DllName, EntryPoint = "JPH_SphereShape_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_SphereShape* JPH_SphereShape_Create(float radius);

        [DllImport(__DllName, EntryPoint = "JPH_SphereShape_GetRadius", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_SphereShape_GetRadius(JPH_SphereShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_PlaneShapeSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_PlaneShapeSettings* JPH_PlaneShapeSettings_Create(JPH_Plane* plane, JPH_PhysicsMaterial* material, float halfExtent);

        [DllImport(__DllName, EntryPoint = "JPH_PlaneShapeSettings_CreateShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_PlaneShape* JPH_PlaneShapeSettings_CreateShape(JPH_PlaneShapeSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_PlaneShape_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_PlaneShape* JPH_PlaneShape_Create(JPH_Plane* plane, JPH_PhysicsMaterial* material, float halfExtent);

        [DllImport(__DllName, EntryPoint = "JPH_PlaneShape_GetPlane", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PlaneShape_GetPlane(JPH_PlaneShape* shape, JPH_Plane* result);

        [DllImport(__DllName, EntryPoint = "JPH_PlaneShape_GetHalfExtent", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_PlaneShape_GetHalfExtent(JPH_PlaneShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_TriangleShapeSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_TriangleShapeSettings* JPH_TriangleShapeSettings_Create(JPH_Vec3* v1, JPH_Vec3* v2, JPH_Vec3* v3, float convexRadius);

        [DllImport(__DllName, EntryPoint = "JPH_TriangleShapeSettings_CreateShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_TriangleShape* JPH_TriangleShapeSettings_CreateShape(JPH_TriangleShapeSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_TriangleShape_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_TriangleShape* JPH_TriangleShape_Create(JPH_Vec3* v1, JPH_Vec3* v2, JPH_Vec3* v3, float convexRadius);

        [DllImport(__DllName, EntryPoint = "JPH_TriangleShape_GetConvexRadius", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_TriangleShape_GetConvexRadius(JPH_TriangleShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_TriangleShape_GetVertex1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_TriangleShape_GetVertex1(JPH_TriangleShape* shape, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_TriangleShape_GetVertex2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_TriangleShape_GetVertex2(JPH_TriangleShape* shape, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_TriangleShape_GetVertex3", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_TriangleShape_GetVertex3(JPH_TriangleShape* shape, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_CapsuleShapeSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_CapsuleShapeSettings* JPH_CapsuleShapeSettings_Create(float halfHeightOfCylinder, float radius);

        [DllImport(__DllName, EntryPoint = "JPH_CapsuleShapeSettings_CreateShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_CapsuleShape* JPH_CapsuleShapeSettings_CreateShape(JPH_CapsuleShapeSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_CapsuleShape_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_CapsuleShape* JPH_CapsuleShape_Create(float halfHeightOfCylinder, float radius);

        [DllImport(__DllName, EntryPoint = "JPH_CapsuleShape_GetRadius", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_CapsuleShape_GetRadius(JPH_CapsuleShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_CapsuleShape_GetHalfHeightOfCylinder", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_CapsuleShape_GetHalfHeightOfCylinder(JPH_CapsuleShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_CylinderShapeSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_CylinderShapeSettings* JPH_CylinderShapeSettings_Create(float halfHeight, float radius, float convexRadius);

        [DllImport(__DllName, EntryPoint = "JPH_CylinderShapeSettings_CreateShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_CylinderShape* JPH_CylinderShapeSettings_CreateShape(JPH_CylinderShapeSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_CylinderShape_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_CylinderShape* JPH_CylinderShape_Create(float halfHeight, float radius);

        [DllImport(__DllName, EntryPoint = "JPH_CylinderShape_GetRadius", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_CylinderShape_GetRadius(JPH_CylinderShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_CylinderShape_GetHalfHeight", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_CylinderShape_GetHalfHeight(JPH_CylinderShape* shape);

        [DllImport(__DllName, EntryPoint = "JPH_TaperedCylinderShapeSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_TaperedCylinderShapeSettings* JPH_TaperedCylinderShapeSettings_Create(float halfHeightOfTaperedCylinder, float topRadius, float bottomRadius, float convexRadius, JPH_PhysicsMaterial* material);

        [DllImport(__DllName, EntryPoint = "JPH_TaperedCylinderShapeSettings_CreateShape", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_TaperedCylinderShape* JPH_TaperedCylinderShapeSettings_CreateShape(JPH_TaperedCylinderShapeSettings* settings);
